[project]
authors = [
    { name = "usman", email = "usmanbaibikov@gmail.com" },
]
requires-python = "<4.0,>=3.12"
name = "search_engine"
version = "1.0.0"
description = "Hexlet. Implement Search engine"
readme = "README.md"

[dependency-groups]
dev = [
    "ruff>=0.7.1",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
]

[project.scripts]
hexlet-python-package = "hexlet_python_package.scripts.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hexlet_python_package"]

[tool.poetry]
authors = [
    "Hexlet team <team@hexlet.io>",
]
name = "python-example-app"
version = "0.1.0"
description = "Example application"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
